hphp/test/zend/bad/ext/spl/tests/SplFileInfo_getPerms_error.php
<?php

//file
$fileInfo = new SplFileInfo('not_existing');
var_dump($fileInfo->getPerms() == 0100557);
?>
